# video-sub

./: .gitignore  DIST-README.md  README.md  TTS_SETUP.md  clean.sh  install.sh  package-lock.json  package.json  requirements.txt  run.sh  serve.sh  start.sh  sub.sh  tts_server.sh  tunnel.sh  web.sh
docs/superpowers/plans/: 2026-06-28-auto-sub-web-ui.md  2026-07-23-tauri-p1-foundation.md  2026-07-23-tauri-p2-pipeline-port.md  2026-07-23-tauri-p3p4-integrate-merge.md
docs/superpowers/specs/: 2026-06-28-auto-sub-web-ui-design.md  2026-07-23-tauri-desktop-app-design.md
scripts/: build-dmg.sh  fetch-binaries.sh  gen-golden.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: align.rs  ass.rs  commands.rs  corrections.rs  ffmpeg.rs  main.rs  pipeline.rs  setup.rs  srt.rs  tools.rs  whisper.rs
src-tauri/tests/golden/: align.json  ass_helpers.json  band_ass.json  corrections.json  force_style.json  split_cues.json  srt_hide.json  srt_parse.json  srt_shift.json  srt_write.json  word_timings.json  wrap.json
tests/: conftest.py  test_pipeline.py  test_server.py  test_subtitles.py
webapp/: corrections.txt  pipeline.py  server.py  subtitles.py  tts.py
webapp/static/: app.css  app.js  index.html  setup.html  setup.js
webapp/styles/: input.css
